fix(kwayland): remove code with side-effects from Q_ASSERT

Summary:
BUG: 413892
FIXED-IN: 5.18.2

Reviewers: #plasma, davidedmundson, meven

Reviewed By: #plasma, davidedmundson, meven

Subscribers: meven, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27536